--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,61 +1,51 @@
-<resources>
-    <string name="app_name">声动互娱</string>
-    <string name="app_title_home">首页</string>
-    <string name="app_title_find">发现</string>
-    <string name="app_title_mine">我的</string>
-    <string name="app_action_settings">设置</string>
-
-    <string name="app_exit">退出</string>
-    <string name="app_user_agreement">用户协议</string>
-    <string name="app_privacy_agreement">隐私政策</string>
-    <string name="app_personal_info_collection_checklist">个人信息收集清单</string>
-    <string name="app_third_party_info_data_sharing">第三方信息数据共享</string>
-    <string name="app_and">及</string>
-
-    <string name="app_confirm_deletion">确认删除？</string>
-    <string name="app_about_us">关于我们</string>
-
-    <string name="app_please_input_account">请输入手机号</string>
-    <string name="app_error_pwd_tip">8-20个字符，包含大、小写字母和数字</string>
-    <string name="app_please_input_pwd">请输入密码</string>
-    <string name="app_please_input_v_code">请输入验证码</string>
-    <string name="app_forget_password">忘记密码</string>
-    <string name="app_login">登录</string>
-    <string name="app_finish">完成</string>
-    <string name="app_register_account">注册账号</string>
-    <string name="app_welcome_experience">欢迎体验声网服务</string>
-    <string name="app_mobile_number">手机号</string>
-    <string name="app_v_code">验证码</string>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<resources><string name="app_name">Agora Social Entertainment</string>
+    <string name="app_title_home">Home page</string>
+    <string name="app_title_find">uncovers</string>
+    <string name="app_title_mine">my</string>
+    <string name="app_action_settings">setups</string>
+    <string name="app_exit">quit</string>
+    <string name="app_user_agreement">User Agreement</string>
+    <string name="app_privacy_agreement">Privacy policy</string>
+    <string name="app_personal_info_collection_checklist">Personal information collection list</string>
+    <string name="app_third_party_info_data_sharing">Third-party information and data sharing</string>
+    <string name="app_and">and</string>
+    <string name="app_confirm_deletion">Confirm the deletion?</string>
+    <string name="app_about_us">About Us</string>
+    <string name="app_please_input_account">Please enter your phone number</string>
+    <string name="app_error_pwd_tip">The value contains 8 to 20 characters, including large, lowercase, and digits</string>
+    <string name="app_please_input_pwd">Please enter a password</string>
+    <string name="app_please_input_v_code">Please enter the verification code</string>
+    <string name="app_forget_password">I forgot my password</string>
+    <string name="app_login">Log in</string>
+    <string name="app_finish">fulfilment</string>
+    <string name="app_register_account">Sign up for an account</string>
+    <string name="app_welcome_experience">Welcome to the Agora service</string>
+    <string name="app_mobile_number">Cell phone number</string>
+    <string name="app_v_code">Verification code</string>
     <string name="app_plus_86">+86</string>
-    <string name="app_logout">退出登录</string>
-    <string name="app_logoff_account">注销账号</string>
-    <string name="app_debug_mode">开发者模式</string>
-    <string name="app_logoff">注销</string>
-
-    <string name="app_voice_chat">语聊房</string>
-    <string name="app_show_live">秀场直播</string>
-    <string name="app_meta_live">元直播</string>
-    <string name="app_meta_chatting">元语聊</string>
-    <string name="app_interactive_games">互动游戏</string>
-    <string name="app_coming_soon">敬请期待</string>
-    <string name="app_voice_chat_spatial">空间音频</string>
-
-    <string name="app_voice_chat_spatialTip">—空间音频模式</string>
-
-
-    <string name="app_about_app">About us</string>
+    <string name="app_logout">sign out</string>
+    <string name="app_logoff_account">Cancelling an account</string>
+    <string name="app_logoff">deregister</string>
+    <string name="app_debug_mode">Developer mode</string>
+    <string name="app_voice_chat">Chat Room</string>
+    <string name="app_show_live">Live broadcast of the show</string>
+    <string name="app_meta_live">Meta Live</string>
+    <string name="app_meta_chatting">Yuanyu chat</string>
+    <string name="app_interactive_games">interactive game</string>
+    <string name="app_coming_soon">Stay tuned</string>
+    <string name="app_voice_chat_spatial">Spatial Audio</string>
+    <string name="app_voice_chat_spatialTip">— Spatial Audio mode</string>
+    <string name="app_about_app">About Agora Social Entertainment</string>
     <string name="app_about_name">Agora Social Entertainment</string>
-    <string name="app_about_version">Version</string>
-    <string name="app_about_scene_version">Scene Version</string>
+    <string name="app_about_version">version number</string>
+    <string name="app_about_scene_version">Scene version number</string>
     <string name="app_about_chat_room">Chat Room</string>
-    <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
-    <string name="app_about_karaoke">Karaoke</string>
-    <string name="app_about_show">Show</string>
-    <string name="app_about_customer_service">Customer Service</string>
-    <string name="app_about_official_website">Official Website</string>
+    <string name="app_about_chat_room_spatial">Language chat room - Spatial Audio mode</string>
+    <string name="app_about_karaoke">Online K-songs</string>
+    <string name="app_about_show">Live broadcast of the show</string>
+    <string name="app_about_customer_service">Contact Customer Service</string>
+    <string name="app_about_official_website">Official website address</string>
     <string name="app_about_phone_cancel">Cancel</string>
-    <string name="app_mine_current_version">Version %s</string>
-
-
+    <string name="app_mine_current_version">Current version number: %s</string>
 </resources>
