--- a/iOS/AgoraEntScenarios/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/en.lproj/Localizable.strings
@@ -11,3 +11,7 @@
 "SceneVersion" = "Scene Version";
 "ContactCustomerService" = "Contact Customer Service";
 "OfficialWebsiteAddress" = "Official Website Address";
+"语聊房"="Chat Room";
+"语聊房-空间音频模式"="Chat Room SA Mode";
+"在线K歌"="Karaoke";
+"秀场直播"="Show";
