--- a/iOS/AgoraEntScenarios/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/zh-Hans.lproj/Localizable.strings
@@ -11,3 +11,7 @@
 "SceneVersion" = "场景版本号";
 "ContactCustomerService" = "联系客服";
 "OfficialWebsiteAddress" = "官网地址";
+"语聊房"="语聊房";
+"语聊房-空间音频模式"="语聊房-空间音频模式";
+"在线K歌"="在线K歌";
+"秀场直播"="秀场直播";
