[FIX] some supplement

--- a/Android/common/base/src/main/res/values-zh/strings.xml
+++ b/Android/common/base/src/main/res/values-zh/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="try_again_to_exit">再按一次退出应用</string>
     <string name="permission_leak_tip">需要相应权限，请打开</string>
+    <string name="id_is_">ID:%s</string>
 </resources>
