--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -247,6 +247,7 @@
 "强制Oboe" = "强制Oboe";
 "开启耳返可实时听到自己的声音, 唱歌的时候及时调整" = "开启耳返可实时听到自己的声音, 唱歌的时候及时调整";
 "使用耳返必须插入耳机，当前未检测到耳机" = "使用耳返必须插入耳机，当前未检测到耳机";
+"使用耳返必须开麦，当前未开麦" = "使用耳返必须开麦，当前未开麦";
 "耳返" = "耳返";
 "开启耳返" = "开启耳返";
 "耳返设置" = "耳返设置";
