--- a/Android/scenes/voice/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice/src/main/res/values-zh/strings.xml
@@ -131,6 +131,15 @@
     <string name="voice_room_disclaimer_email">若您有任何疑问，请联系support@agora.io</string>
     <string name="voice_chatroom_notice">公告</string>
     <string name="voice_chatroom_settings_host_only">仅房主可操作</string>
+    <string name="voice_chatroom_settings_bgm_title">背景音乐(%d)</string>
+    <string name="voice_chatroom_settings_earback_title">耳返</string>
+    <string name="voice_chatroom_settings_earback_on">开启耳返</string>
+    <string name="voice_chatroom_settings_earback_tip">&#160;&#160;开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
+    <string name="voice_chatroom_settings_earback_waring">&#160;&#160;使用耳返必须插入耳机，当前未检测到耳机</string>
+    <string name="voice_chatroom_settings_earback_setting">耳返设置</string>
+    <string name="voice_chatroom_settings_earback_volume">耳返音量</string>
+    <string name="voice_chatroom_settings_earback_ping">耳返延时</string>
+    <string name="voice_chatroom_settings_earback_ping_tips">请对着耳麦说话，测试实时耳返延时</string>
     <string name="voice_chatroom_own_audio_settings">个人音效设置</string>
     <string name="voice_chatroom_audio_settings">音效设置</string>
     <string name="voice_chatroom_bot_settings">机器人设置</string>
