--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources><string name="app_name">Agora Social Entertainment</string>
+<resources><string name="app_name">Agora Social Entertainment-Voice</string>
     <string name="app_title_home">Home page</string>
     <string name="app_title_find">uncovers</string>
     <string name="app_title_mine">my</string>
