--- a/iOS/AgoraEntScenarios/zh-Hans.lproj/InfoPlist.strings
+++ b/iOS/AgoraEntScenarios/zh-Hans.lproj/InfoPlist.strings
@@ -6,5 +6,5 @@
   
 */
 
-CFBundleDisplayName = "声动互娱";
+CFBundleDisplayName = "声动互娱-语聊";
 NSMicrophoneUsageDescription = "当你进行语聊/K歌/直播时，声动互娱 - K歌想要申请麦克风访问";
