--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -116,6 +116,11 @@
     <string name="ktv_voice_highlight">突出人声</string>
     <string name="ktv_voice_profile">配置</string>
     <string name="ktv_voice_professional">专业主播</string>
+    <string name="ktv_voice_quality">音质</string>
+    <string name="ktv_voice_AINS">降低背景噪音</string>
+    <string name="ktv_low_latency">降低背景噪音</string>
+    <string name="ktv_AIAEC_switcher">AIAEC 开关（beta）</string>
+    <string name="ktv_AIAEC_strength">AIAEC 强度选择（beta）</string>
 
     <!--    Content Description-->
     <string name="ktv_toggle_mic">麦克风启用或静音</string>
