[Android] add virtual sound card

--- a/Android/scenes/voice/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice/src/main/res/values-zh/strings.xml
@@ -152,6 +152,26 @@
     <string name="voice_chatroom_aiaec">AI回声消除</string>
     <string name="voice_chatroom_aiagc">人声自动增益</string>
     <string name="voice_chatroom_ear_back">耳返</string>
+    <string name="voice_chatroom_virtual_sound_card">虚拟声卡</string>
+    <string name="voice_chatroom_input_device">输入设备</string>
+    <string name="voice_chatroom_external_mircrophone">default 外置麦克风</string>
+    <string name="voice_chatroom_sound_card_switch">虚拟声卡开关</string>
+    <string name="voice_chatroom_sound_card_error">当前无法使用虚拟声卡，请链接有线输入设备</string>
+    <string name="voice_chatroom_sound_card_supports">虚拟声卡目前已支持输入设备清单如下： \n1.有线耳机 \n2.有线麦克风</string>
+    <string name="voice_chatroom_virtual_sound_card_switch">虚拟声卡开关</string>
+    <string name="voice_chatroom_preset_sound">预设音效</string>
+    <string name="voice_chatroom_preset_sound_oba">性感欧巴</string>
+    <string name="voice_chatroom_preset_sound_oba_tips">悦耳 | 磁性</string>
+    <string name="voice_chatroom_preset_sound_lady">温柔御姐</string>
+    <string name="voice_chatroom_preset_sound_lady_tips">柔美 | 磁性</string>
+    <string name="voice_chatroom_preset_sound_boy">阳光正太</string>
+    <string name="voice_chatroom_preset_sound_boy_tips">洪亮 | 饱满</string>
+    <string name="voice_chatroom_preset_sound_sweet">甜美嗲气</string>
+    <string name="voice_chatroom_preset_sound_sweet_tips">夹子音 | 萝莉</string>
+    <string name="voice_chatroom_gain_adjust">增益调节</string>
+    <string name="voice_chatroom_gain_adjust_tips">减少声音信号的增益倍数</string>
+    <string name="voice_chatroom_mircrophone_type">麦克风类型</string>
+    <string name="voice_chatroom_mircrophone_type_tips">选择一套更适合当前麦克风的预设参数</string>
     <string name="voice_chatroom_bgm">背景音乐</string>
     <string name="voice_chatroom_aiaec_audition">AIAEC试听</string>
     <string name="voice_chatroom_aiagc_audition">AGC试听</string>
