修改国际化方法

--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/en.lproj/Localizable.strings
@@ -174,3 +174,4 @@ improve your singing effect. It is strongly recommended that you turn it on when
 "spatial_voice_i_got_it" = "I got it";
 "spatial_voice_host_only" = "Host Only";
 "spatial_voice_welcome" = "Welcome";
+"spatial_voice_try_best_agora_sound" = "Try Best Agora Sound";
