--- a/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SpatialAudio/SpatialAudioResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -174,3 +174,4 @@
 "spatial_voice_i_got_it" = "我知道了";
 "spatial_voice_host_only" = "仅房主可操作";
 "spatial_voice_welcome" = "欢迎";
+"spatial_voice_try_best_agora_sound" = "试试最好的Agora声音";
