--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -188,3 +188,4 @@
 "voice_contribution_empty" = "Contribution empty";
 "voice_report" = "Report";
 "voice_report_success" = "Reported";
+"voice_try_best_agora_sound" = "Try Best Agora Sound";
