--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -190,3 +190,4 @@
 "voice_contribution_empty" = "暂无贡献者";
 "voice_report" = "举报";
 "voice_report_success" = "举报成功";
+"voice_try_best_agora_sound" = "试试最好的Agora声音";
