--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -162,14 +162,18 @@
     <string name="ktv_sound_card_supports">虚拟声卡目前已支持输入设备清单如下： \n1.有线耳机 \n2.有线麦克风</string>
     <string name="ktv_virtual_sound_card_switch">虚拟声卡开关</string>
     <string name="ktv_preset_sound">预设音效</string>
-    <string name="ktv_preset_sound_oba">性感欧巴</string>
+    <string name="ktv_preset_sound_oba">性感欧巴-语聊</string>
     <string name="ktv_preset_sound_oba_tips">悦耳 | 磁性</string>
-    <string name="ktv_preset_sound_lady">温柔御姐</string>
+    <string name="ktv_preset_sound_lady">温柔御姐-语聊</string>
     <string name="ktv_preset_sound_lady_tips">柔美 | 磁性</string>
-    <string name="ktv_preset_sound_boy">阳光正太</string>
+    <string name="ktv_preset_sound_boy">阳光正太-语聊</string>
     <string name="ktv_preset_sound_boy_tips">洪亮 | 饱满</string>
-    <string name="ktv_preset_sound_sweet">甜美嗲气</string>
+    <string name="ktv_preset_sound_sweet">甜美嗲气-语聊</string>
     <string name="ktv_preset_sound_sweet_tips">夹子音 | 萝莉</string>
+    <string name="ktv_preset_sound_uncle">成熟大叔-K歌</string>
+    <string name="ktv_preset_sound_uncle_tips">低沉 | 高混响-唱歌</string>
+    <string name="ktv_preset_sound_announcer">女播音员-K歌</string>
+    <string name="ktv_preset_sound_announcer_tips">厚重 | 高混响-唱歌</string>
     <string name="ktv_gain_adjust">增益调节</string>
     <string name="ktv_gain_adjust_tips">减少声音信号的增益倍数</string>
     <string name="ktv_mircrophone_type">麦克风类型</string>
