--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -6,7 +6,6 @@
   
 */
 
-"Send"="发送";
-"Contribution Total"="贡献总计";
-"Gifts" = "送给";
-"Sent " = "赠送 ";
+"user_list_title"="1v1私密房";
+"user_list_waitting"="等待其他用户";
+"user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。";
