--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "user_list_waitting"="等待其他用户";
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。";
 "call_state_waitting"="等待对方接受...";
+"call_state_connecting"="连接中...";
