--- a/Android/scenes/ktv_relay/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv_relay/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="ktv_create_tips1">欢迎来到声网在线K歌房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！</string>
     <string name="ktv_create_tips2">本应用为测试产品，请勿商用</string>
     <string name="ktv_create_tips3">单次K歌最长20分钟，每个房间最多8人</string>
-    <string name="ktv_create_tips4">欢迎来到声网嗨歌抢唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！</string>
+    <string name="ktv_create_tips4">欢迎来到声网抢麦接唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！</string>
     <string name="ktv_room_before_speaker">点击空麦位，上麦后加入游戏</string>
     <string name="ktv_room_owner">房主</string>
     <string name="ktv_room_sing1">演唱中</string>
@@ -153,5 +153,6 @@
     <string name="ktv_game_room_owner_choosing_song">房主点歌中，游戏即将开始</string>
     <string name="ktv_game_start">嗨唱开始</string>
     <string name="ktv_game_nobody_grasp">本轮无人演唱 \n 即将播放下一首</string>
-
+    <string name="ktv_tips">公告 ></string>
+    <string name="ktv_relay">抢麦接唱</string>
 </resources>
