--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -11,3 +11,6 @@
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。";
 "call_state_waitting"="等待对方接受";
 "call_state_connecting"="连接中";
+"call_title_accept"="立即接受";
+"call_title_reject"="拒绝";
+"call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
