--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -8,3 +8,25 @@
 
 
 "user_list_title"="秀场转1V1私密房";
+"user_list_waitting"="暂无主播在线，你来创建一个吧！";
+"user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无主播开播，你可以叫上你的朋友一起来体验我们的场景功能。";
+"call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
+"call_toast_hangup"="对方结束连线";
+"setting_statistic" = "实时数据";
+
+
+"show_statistic_bitrate" = "码率";
+"show_statistic_delay" = "延迟";
+"show_statistic_receive_title" = "接收";
+"show_statistic_send_title" = "发送";
+"show_statistic_receive_resolution" = "接收分辨率";
+"show_statistic_up_net_speech" = "上行网络";
+"show_setting_advance_framerate" = "帧率";
+"show_statistic_receive_fps" = "接收帧率";
+"show_statistic_down_loss_package" = "下行丢包率";
+"show_statistic_up_loss_package" = "上行丢包率";
+"show_statistic_up_bitrate" = "发送码率";
+"show_statistic_encode_resolution" = "编码分辨率";
+"show_advance_setting_FPS_title" = "编码帧率";
+"show_statistic_loss_package" = "丢包率";
+"show_statistic_down_net_speech" = "下行网络";
