--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "app_about_chat_room_spatial"="语聊房-空间音频模式";
 "app_about_karaoke"="在线K歌";
 "app_about_show"="秀场直播";
+"app_about_1v1"="1v1私密房";
 "app_about_customer_service"="联系客服";
 "app_about_official_website"="官网地址";
 "app_about_phone_cancel"="取消";
