[FEAT] new scene pure1v1

--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -38,6 +38,7 @@
     <string name="app_meta_live">元直播</string>
     <string name="app_meta_chatting">元语聊</string>
     <string name="app_interactive_games">互动游戏</string>
+    <string name="app_one_to_one">1V1私密房</string>
     <string name="app_coming_soon">敬请期待</string>
     <string name="app_voice_chat_spatial">空间音频</string>
 
