--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "call_toast_hangup"="对方结束连线";
 "setting_statistic" = "实时数据";
 "call_user_busy_tips"="我很快回来，一会再连线我把";
+"call_content_inspect_warning"="监测到当前内容存在违规行为";
 
 
 "show_statistic_bitrate" = "码率";
