--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "call_title_reject"="拒绝";
 "call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
 "call_toast_hangup"="对方结束连线";
+"call_toast_reject"="对方已拒绝";
 
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
 
